# flask-homework

./: .gitignore  Dockerfile  README.md  docker-compose.yml  http-client.env.json  main.py  pyproject.toml  requests_test.http  requirements.txt
models/: advertisements.py  tokens.py  users.py
serializers/: advertisiments_serializers.py  base_serializer.py  tokens_serializer.py  user_serializer.py
utils/: decorators.py  json_message.py  messages.py  password_hash.py  sq.py  tokens.py  users.py  validation.py
views/: advertisement_detail.py  index.py  user_login.py  user_logout.py  user_registration.py
